# rustyai

./: Cargo.toml  README.md
examples/: chat_completion.rs  chat_completion_stream.rs
src/: lib.rs
